Bug #18594 ndb_restore log boken in 5.1
Submitted: 29 Mar 2006 1:25 Modified: 22 Apr 2006 16:30
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.1.9 OS:Linux (Linux 32 Bit OS)
Assigned to: Tomas Ulin Target Version:

[29 Mar 2006 1:25] Jonathan Miller
Description:
ndb_restore -c $ndbc -n 2 -b 48 -m -e -r ./
Nodeid = 2
Backup Id = 48
backup path = ./
Ndb version in backup files: Version 5.1.9
Connected to ndb!!
Creating logfile group: lg1...done
Creating tablespace: TESTER2_TS...done
Creating tablespace: TPCB_TS...done
Creating tablespace: BANK_TS...done
Creating datafile "./BANK_DF/datafile02.dat"...done
Creating datafile "./tpcb_ts/datafile.dat"...done
Creating datafile "./BANK_DF/datafile.dat"...done
Creating undofile "./lg1/undofile.dat"...done
Creating undofile "./lg1/undofile2.dat"...done
Creating datafile "./tester2_ts/datafile.dat"...done
Creating undofile "./lg1/undofile3.dat"...done
Successfully restored table BANK2/def/SYSTEM_VALUES
Successfully restored table event REPL$BANK2/SYSTEM_VALUES
Successfully restored table BANK2/def/ACCOUNT
Successfully restored table event REPL$BANK2/ACCOUNT
Successfully restored table hlr/def/matable
Successfully restored table event REPL$hlr/matable
Successfully restored table BANK/def/GL
Successfully restored table event REPL$BANK/GL
Successfully restored table TPCB/def/teller
Successfully restored table event REPL$TPCB/teller
Successfully restored table TPCB/def/branch
Successfully restored table event REPL$TPCB/branch
Successfully restored table TPCB/def/history
Successfully restored table event REPL$TPCB/history
Successfully restored table BANK/def/SYSTEM_VALUES
Successfully restored table event REPL$BANK/SYSTEM_VALUES
Successfully restored table TPCB/def/trans
Successfully restored table event REPL$TPCB/trans
Successfully restored table BANK/def/TRANSACTION
Successfully restored table event REPL$BANK/TRANSACTION
Successfully restored table BANK2/def/ACCOUNT_TYPES
Successfully restored table event REPL$BANK2/ACCOUNT_TYPES
Successfully restored table TPCB/def/account
Successfully restored table event REPL$TPCB/account
Successfully restored table BANK2/def/GL
Successfully restored table event REPL$BANK2/GL
Successfully restored table TESTER2/def/t1
Successfully restored table event REPL$TESTER2/t1
Successfully restored table BANK/def/ACCOUNT
Successfully restored table event REPL$BANK/ACCOUNT
Successfully restored table BANK/def/ACCOUNT_TYPES
Successfully restored table event REPL$BANK/ACCOUNT_TYPES
Successfully restored table BANK2/def/TRANSACTION
Successfully restored table event REPL$BANK2/TRANSACTION
Successfully created index PRIMARY on trans
Successfully created index PRIMARY on branch
Successfully created index PRIMARY on history
Successfully created index PRIMARY on account
Successfully created index PRIMARY on teller
_____________________________________________________
Processing data in table: BANK2/def/SYSTEM_VALUES(24) fragment 0
_____________________________________________________
Processing data in table: BANK2/def/ACCOUNT(22) fragment 0
_____________________________________________________
Processing data in table: cluster/def/NDB$BLOB_2_3(3) fragment 0
_____________________________________________________
Processing data in table: hlr/def/matable(34) fragment 0
_____________________________________________________
Processing data in table: BANK/def/GL(29) fragment 0
_____________________________________________________
Processing data in table: TPCB/def/teller(15) fragment 0
_____________________________________________________
Processing data in table: TPCB/def/branch(13) fragment 0
_____________________________________________________
Processing data in table: TPCB/def/history(17) fragment 0
_____________________________________________________
Processing data in table: sys/def/NDB$EVENTS_0(1) fragment 0
_____________________________________________________
Processing data in table: BANK/def/SYSTEM_VALUES(32) fragment 0
_____________________________________________________
Processing data in table: TPCB/def/trans(19) fragment 0
_____________________________________________________
Processing data in table: BANK/def/TRANSACTION(31) fragment 0
_____________________________________________________
Processing data in table: BANK2/def/ACCOUNT_TYPES(25) fragment 0
_____________________________________________________
Processing data in table: TPCB/def/account(11) fragment 0
_____________________________________________________
Processing data in table: cluster/def/schema(2) fragment 0
_____________________________________________________
Processing data in table: BANK2/def/GL(21) fragment 0
_____________________________________________________
Processing data in table: cluster/def/apply_status(4) fragment 0
_____________________________________________________
Processing data in table: TESTER2/def/t1(37) fragment 0
_____________________________________________________
Processing data in table: BANK/def/ACCOUNT(30) fragment 0
_____________________________________________________
Processing data in table: BANK/def/ACCOUNT_TYPES(33) fragment 0
_____________________________________________________
Processing data in table: sys/def/SYSTAB_0(0) fragment 0
_____________________________________________________
Processing data in table: BANK2/def/TRANSACTION(23) fragment 0
Aborted (core dumped)

(gdb) bt
#0  0x002b9402 in __kernel_vsyscall ()
#1  0x00b7a118 in raise () from /lib/libc.so.6
#2  0x00b7b888 in abort () from /lib/libc.so.6
#3  0x08062cf4 in Vector<AttributeDesc*>::operator[] ()
#4  0x08062d1d in TableS::operator[] ()
#5  0x08061d78 in RestoreLogIterator::getNextLogEntry ()
#6  0x0805819d in main ()
(gdb) quit

How to repeat:
Try to restore backup
[20 Apr 2006 17:17] Tomas Ulin
simply run bank transaction
take a backup so that a log is created

ndb_restore -b X -n Y --print_log will crash immediately
[21 Apr 2006 9:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5256
[21 Apr 2006 9:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5272
[21 Apr 2006 10:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5278
[21 Apr 2006 14:59] Tomas Ulin
revieed by jonas
[21 Apr 2006 16:42] Tomas Ulin
pushed to 5.1.10
[22 Apr 2006 16:30] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented fix in 5.1.10 changelog. Closed.