BUG#18594 ndb_restore log boken in 5.1 - corrected log read after fragment id addition