storage/ndb/src/kernel/blocks/backup/BackupFormat.hpp
@@ -144,7 +144,7 @@ struct BackupFormat {
       // If TriggerEvent & 0x10000 == true then GCI is right after data
       Uint32 TriggerEvent;
       Uint32 FragId;
-      Uint32 Data[1]; // Len = Length - 2
+      Uint32 Data[1]; // Len = Length - 3
     };
   };
 
